# bluenode

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
codesearch_gym/: __init__.py  blueprints.py  fixtures.py  grader.py  runner.py  schemas.py  seeds_adversarial.py  structured_gen.py  verify_seeds.py
docs/: MODEL_COMPARISON.md
docs/ast-grep/: ast-grep-full-doc.md
docs/data-gen/: action.md  design.md  overview.md
docs/plans/: plan-build-codesearch-gym-infrastructure-(schemas,-runner,-verifier,-grader)-0.md  plan-create-fixtures-&-adversarial-seed-blueprints-0.md  plan-implement-vllm-structured-outputs-generator-0.md
docs/rip-grep/: FAQ.md  GUIDE.md  README.md
tests/: test_blueprints.py  test_fixtures.py  test_grader.py  test_integration_seeds.py  test_runner.py  test_schemas.py  test_seeds_adversarial.py  test_structured_gen.py  test_verify_seeds.py
